Fixed layout issue

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -216,7 +216,7 @@ a {
   }
 
   .details-section {
-    margin-top: 30% !important;
+    margin-top: 36% !important;
   }
 
   .top-anime-img,
